--- a/OneDrive/Escritorio/BackEnd ListaDeTarea/ListaDeTareas/pom.xml
+++ b/OneDrive/Escritorio/BackEnd ListaDeTarea/ListaDeTareas/pom.xml
@@ -51,10 +51,13 @@
             <artifactId>spring-data-jpa</artifactId>
             <version>2.6.2</version>
         </dependency>
+         <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>1.4.200</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate.validator</groupId>
