--- a/OneDrive/Escritorio/BackEnd ListaDeTarea/ListaDeTareas/src/main/resources/application.properties
+++ b/OneDrive/Escritorio/BackEnd ListaDeTarea/ListaDeTareas/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+spring.datasource.url= jdbc:mysql://bhjh3jlldezwxjoae8rr-mysql.services.clever-cloud.com:3306/bhjh3jlldezwxjoae8rr?serveTimezone=UTC
+spring.datasource.username=u90pnjfcdyft5s6x
+spring.datasource.password=S0G0MDBJd7ouZVZXn9ea
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show.sql=true
+spring.jpa.hibernate.ddl-auto=update
+logging.level.org.hibernate.SQL=debug
 
+#security
+jwt.secret = secret
+jwt.expiration = 36000
