Crud completo y conexion con base de datos con jwt y roles

--- a/OneDrive/Escritorio/BackEnd ListaDeTarea/ListaDeTareas/pom.xml
+++ b/OneDrive/Escritorio/BackEnd ListaDeTarea/ListaDeTareas/pom.xml
@@ -88,6 +88,34 @@
             <version>5.3.19</version>
             <type>jar</type>
         </dependency>
+        
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency> 
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>5.7.1</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>com.nimbusds</groupId>
+            <artifactId>nimbus-jose-jwt</artifactId>
+            <version>9.22</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>5.6.3</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 
     <build>
